--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
-.main {
-	background-image: url(http://adwallpapers.xyz/uploads/posts/6231-whiteblue-abstract-modern-background.jpg);
+body {
+    background-image: url(/assets/ari-spada-mRAyhadPtm0-unsplash.jpg);
 	background-repeat: no-repeat;
 	background-attachment: fixed;
     background-position: center;
@@ -13,4 +13,17 @@
 
 .btn {
     margin: 2px 0;
+}
+
+img {
+    margin-top: 5px;
+}
+
+.jumbotron {
+    background-color: rgba(255, 255, 255, 0.8);
+}
+
+footer {
+    text-align: center;
+    background-color: rgba(255, 255, 255, 0.8);
 }
