--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ body {
 	background-attachment: fixed;
     background-position: center;
     background-size: cover;
-    height: 100vh;
+    padding: 10px;
 }
 
 .card {
